force-app/main/default/objects/vlocity_ps__PartyMergeRequest__c/fields/vlocity_ps__NonMasterId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__NonMasterId__c</fullName>
    <label>Non Master Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>