force-app/main/default/objects/vlocity_ps__PartyMergeRequest__c/listViews/vlocity_ps__All.listView-meta.xml
<ListView>
    <fullName>vlocity_ps__All</fullName>
    <columns>NAME</columns>
    <columns>vlocity_ps__MasterId__c</columns>
    <columns>vlocity_ps__NonMasterId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>