force-app/main/default/objects/vlocity_ps__PartyMergeRequest__c/listViews/vlocity_ps__All1.listView-meta.xml
<ListView>
    <fullName>vlocity_ps__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>